--- a/index.html
+++ b/index.html
@@ -143,23 +143,23 @@ Creators (initial authors):
 - Daniel Sabanes Bove, https://github.com/danielinteractive/ and www.linkedin.com/in/danielsabanesbove/
 - Friedrich Pahlke, https://github.com/fpahlke/ and www.linkedin.com/in/pahlke/
 - Kevin Kunzmann, https://github.com/kkmann/ and https://www.linkedin.com/in/kevin-kunzmann-6486a11bb/
-In the current version, changes were done by (later authors):
 - Liming Li, https://github.com/clarkliming
 - Joe Zhu, https://github.com/shajoezhu and http://www.linkedin.com/in/joe-zhu-464b5818
 - Shuang Li, https://github.com/shuangli22
+In the current version, changes were done by (later authors):
+- Andrew Bean, https://www.linkedin.com/in/andrew-bean-83539116/ and https://github.com/andrew-bean
+- Biju (Ryan) Wang, https://www.linkedin.com/in/bijuwang/ and https://github.com/bijuwang
 License: This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License.
 To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/4.0/.
-The source files are hosted at https://github.com/openpharma/workshop-r-swe, which is forked from
-the original version at https://github.com/kkmann/workshop-r-swe.
+The source files are hosted at https://github.com/openpharma/workshop-r-swe-md, which is forked from
+the original version at https://github.com/openpharma/workshop-r-swe.
 Important: To use this work you must provide the name of the creators (initial authors), a link to the material, a link to the license, and indicate if changes were made.
 -->
 <p>Welcome to the homepage of the workshop <em>“Good Software Engineering Practice for R Packages”</em>. In this course participants will learn hands-on skills and tools to engineer reliable R packages used in biostatistics. The day will be a mix of presentations and exercises. Participants need to be comfortable with writing functions in R and use their own laptops.</p>
 <section id="next-event" class="level2">
 <h2 class="anchored" data-anchor-id="next-event">Next Event</h2>
-<p>The next event will be online, live streamed from Roche Shanghai, so perfect for attendees from Asia! Please mark the Friday 24th March 2023 and register here:</p>
-<p><img src="resources/asia-24Mar2023-barcode.png" class="img-fluid"></p>
-<p>Please note that all the content will be in English. Workshop invitations and preparation details for the practice will be sent out in emails. This event is sponsored/organized by Roche PD China Data Sciences and advertised also through the R User Group (RUG) China. Presenters will be Daniel Sabanes Bove, Liming Li, Shuang Li and Joe Zhu.</p>
-<p>We are looking forward to many online participants!</p>
+<p>The next event will be held on September 26, 2023 as an in-person workshop at the George Washington University, Rockville, MD, US. Please register <a href="https://todo.com">here</a> by TODO.</p>
+<p>This event is organized by the ASA BIOP Software Engineering Working Group (SWE WG) as well as the ASA. We are grateful to have received logistic support by ASA BIOP and ASA. The venue is kindly provided by the George Washington University Biostatistics Center. Presenters will be Andrew Bean, Biju Wang and Daniel Sabanes Bove.</p>
 </section>
 <section id="communication" class="level2">
 <h2 class="anchored" data-anchor-id="communication">Communication</h2>
@@ -167,7 +167,6 @@ Important: To use this work you must provide the name of the creators (initial a
 </section>
 <section id="workshop-program" class="level2">
 <h2 class="anchored" data-anchor-id="workshop-program">Workshop Program</h2>
-<p>This is the program for 24th March 2023, all times in China Standard Time (GMT+8):</p>
 <div class="cell">
 <div class="cell-output-display">
 <table class="table table-sm table-striped small">
@@ -182,7 +181,7 @@ Important: To use this work you must provide the name of the creators (initial a
 </tr>
 <tr class="odd">
 <td style="text-align: left;">10:30 - 10:45</td>
-<td style="text-align: left;">Tea Break</td>
+<td style="text-align: left;">Coffee Break</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">10:45 - 11:45</td>
@@ -202,19 +201,19 @@ Important: To use this work you must provide the name of the creators (initial a
 </tr>
 <tr class="even">
 <td style="text-align: left;">14:45 - 15:00</td>
-<td style="text-align: left;">Tea Break</td>
+<td style="text-align: left;">Afternoon Break</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">15:00 - 15:45</td>
 <td style="text-align: left;">Publication of R Packages</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">15:45 - 16:30</td>
+<td style="text-align: left;">15:45 - 16:45</td>
 <td style="text-align: left;">Shiny Development</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;">16:30 - 17:00</td>
-<td style="text-align: left;">Summary and Discussion</td>
+<td style="text-align: left;">16:45 - 17:00</td>
+<td style="text-align: left;">Summary</td>
 </tr>
 </tbody>
 </table>
@@ -246,7 +245,9 @@ Important: To use this work you must provide the name of the creators (initial a
 <section id="past-events" class="level2">
 <h2 class="anchored" data-anchor-id="past-events">Past Events</h2>
 <ul>
-<li>10th February 2023, Basel</li>
+<li><a href="https://kkmann.github.io/workshop-r-swe/">10th February 2023, Basel, CH</a></li>
+<li><a href="https://openpharma.github.io/workshop-r-swe/">24th March 2023, Shanghai, CN</a></li>
+<li><a href="https://openpharma.github.io/workshop-r-swe-sf/">20th July 2023, San José, CA, US</a></li>
 </ul>
 
 
@@ -485,7 +486,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     }
   }
     var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
-      var filterRegex = new RegExp("https:\/\/openpharma\.github\.io\/workshop-r-swe\/");
+      var filterRegex = new RegExp("https:\/\/openpharma\.github\.io\/workshop-r-swe-md\/");
     var isInternal = (href) => {
         return filterRegex.test(href) || localhostRegex.test(href);
     }
@@ -512,7 +513,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About the Software Engineering Working Group</a>
   </li>  
     <li class="nav-item">
-    <a class="nav-link" href="https://github.com/openpharma/workshop-r-swe">Source Code on GitHub</a>
+    <a class="nav-link" href="https://github.com/openpharma/workshop-r-swe-md">Source Code on GitHub</a>
   </li>  
 </ul>
     </div>
