--- a/listing.html
+++ b/listing.html
@@ -164,7 +164,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./slides/01_intro.html"> <img src="./slides/thumbnails/hello.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -174,7 +174,7 @@ ul.task-list li input[type="checkbox"] {
 1 Introduction
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Introduction and outline of program.<br><span class="copyright">Photo CC0 by Mabel Amber on pexels.com</span></p>
@@ -184,15 +184,15 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/01_intro.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Daniel, Liming, Shuang, Joe
+Andrew, Ryan, Daniel
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8">
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8">
 <div class="thumbnail">
 <p><a href="./slides/02_r_packages.html"> <img src="./slides/thumbnails/packages.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -202,7 +202,7 @@ Daniel, Liming, Shuang, Joe
 2 R packages
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>R package syntax + practical<br><span class="copyright">Photo CC0 by cottonbro studio on pexels.com</span></p>
@@ -212,15 +212,15 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/02_r_packages.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Liming
+Ryan
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12">
+<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="11">
 <div class="thumbnail">
 <p><a href="./slides/03_workflow.html"> <img src="./slides/thumbnails/workflow.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -230,7 +230,7 @@ Liming
 3 An R Package Engineering Workflow
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Workflow for creating R packages + practical<br><span class="copyright">Photo CC0 by Andrea Piacquadio on pexels.com</span></p>
@@ -240,15 +240,15 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/03_workflow.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Daniel
+Andrew
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="22">
+<div class="quarto-post image-right" data-index="3" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="22">
 <div class="thumbnail">
 <p><a href="./slides/04_quality.html"> <img src="./slides/thumbnails/quality.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -258,7 +258,7 @@ Daniel
 4 Ensuring Quality
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Package quality + exercise<br><span class="copyright">Photo CC0 by Pixabay on pexels.com</span></p>
@@ -268,15 +268,15 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/04_quality.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Joe Zhu
+Andrew
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8">
+<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./slides/05_collaboration.html"> <img src="./slides/thumbnails/collaboration.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -286,7 +286,7 @@ Joe Zhu
 5 Version Control &amp; Collaboration
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Collaboration via GitHub + practical<br><span class="copyright">Photo CC0 by THIS IS ZUN on pexels.com</span></p>
@@ -296,15 +296,15 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/05_collaboration.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Shuang
+Daniel
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="5" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./slides/06_publication.html"> <img src="./slides/thumbnails/publish.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -314,7 +314,7 @@ Shuang
 6 Publication
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Publication of R packages + practical<br><span class="copyright">Photo CC0 by Andrea Piacquadio on pexels.com</span></p>
@@ -324,15 +324,15 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/06_publication.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Liming
+Daniel
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9">
+<div class="quarto-post image-right" data-index="6" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9">
 <div class="thumbnail">
 <p><a href="./slides/07_shiny.html"> <img src="./slides/thumbnails/shiny.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -342,7 +342,7 @@ Liming
 7 Shiny Development
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Best Practices for Shiny App Development<br><span class="copyright">Photo by Pixabay on pexels.com</span></p>
@@ -352,15 +352,15 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/07_shiny.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Daniel
+Ryan
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="7" data-listing-date-sort="1679616000000" data-listing-file-modified-sort="1689021841071" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="7" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
 <div class="thumbnail">
 <p><a href="./slides/08_conclusion.html"> <img src="./slides/thumbnails/conclusion.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -370,7 +370,7 @@ Daniel
 8 Conclusion
 </h3>
 <div class="listing-subtitle">
-BBS Course: Good Software Engineering Practice for R Packages
+ASA BIOP Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Discussion of learning experience, summary of workflow, conclusion and next steps.<br><span class="copyright">Photo by Ann H on pexels.com</span></p>
@@ -380,10 +380,34 @@ BBS Course: Good Software Engineering Practice for R Packages
 <div class="metadata">
 <a href="./slides/08_conclusion.html">
 <div class="listing-date">
-Mar 24, 2023
+Sep 26, 2023
 </div>
 <div class="listing-author">
-Joe Zhu
+Daniel
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="8" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1689059648064" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="thumbnail">
+<p><a href="./slides/license_footer.html"> <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div> </a></p>
+</div>
+<div class="body">
+<a href="./slides/license_footer.html">
+<h3 class="no-anchor listing-title">
+</h3>
+<div class="listing-subtitle">
+ASA BIOP Course: Good Software Engineering Practice for R Packages
+</div>
+<div class="listing-description">
+
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./slides/license_footer.html">
+<div class="listing-date">
+Sep 26, 2023
 </div>
 </a>
 </div>
@@ -625,7 +649,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     }
   }
     var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
-      var filterRegex = new RegExp("https:\/\/openpharma\.github\.io\/workshop-r-swe\/");
+      var filterRegex = new RegExp("https:\/\/openpharma\.github\.io\/workshop-r-swe-md\/");
     var isInternal = (href) => {
         return filterRegex.test(href) || localhostRegex.test(href);
     }
@@ -652,7 +676,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About the Software Engineering Working Group</a>
   </li>  
     <li class="nav-item">
-    <a class="nav-link" href="https://github.com/openpharma/workshop-r-swe">Source Code on GitHub</a>
+    <a class="nav-link" href="https://github.com/openpharma/workshop-r-swe-md">Source Code on GitHub</a>
   </li>  
 </ul>
     </div>
