deploy: 09de5096646bd118d64f29e93701de7c763567bd

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Important: To use this work you must provide the name of the creators (initial a
 <p>Welcome to the homepage of the workshop <em>“Good Software Engineering Practice for R Packages”</em>. In this course participants will learn hands-on skills and tools to engineer reliable R packages used in biostatistics. The day will be a mix of presentations and exercises. Participants need to be comfortable with writing functions in R and use their own laptops.</p>
 <section id="next-event" class="level2">
 <h2 class="anchored" data-anchor-id="next-event">Next Event</h2>
-<p>The next event will be held on September 26, 2023 as an in-person workshop at the George Washington University, Rockville, MD, US. Please register <a href="https://todo.com">here</a> by TODO.</p>
+<p>The next event will be held on September 26, 2023 as an in-person workshop at the George Washington University, Biostatistics Center, Suite 750, Rockville, MD, US. If you are faculty or staff of George Washington University, please register <a href="https://www.eventbrite.com/e/good-software-engineering-practice-for-r-packages-tickets-675076410717?aff=oddtdtcreator">here</a> by 21 July to profit from the special early bird registration fee. Afterwards general registration will open at a higher registration fee.</p>
 <p>This event is organized by the ASA BIOP Software Engineering Working Group (SWE WG) as well as the ASA. We are grateful to have received logistic support by ASA BIOP and ASA. The venue is kindly provided by the George Washington University Biostatistics Center. Presenters will be Andrew Bean, Biju Wang and Daniel Sabanes Bove.</p>
 </section>
 <section id="communication" class="level2">
@@ -228,7 +228,7 @@ Important: To use this work you must provide the name of the creators (initial a
 <li>download and extract <a href="slides/download/simulatr.zip">simulatr.zip</a></li>
 <li>either make sure they have a working R software development setup on their own laptop (up-to-date git/Rtools/R/RStudio) or get access to <a href="https://posit.cloud" class="uri">https://posit.cloud</a>. The latter offers a free tier account with 25 hours of computing time per months and can be accessed using ones GitHub.com account.</li>
 </ul>
-<p>For the course, participants are required to use their own laptop to be able to participate in the exercises.</p>
+<p>For the course, participants are required to use their own laptop to be able to participate in the exercises. Light breakfast and coffee, as well as lunch, will be provided.</p>
 <section id="optional-reading-list" class="level3">
 <h3 class="anchored" data-anchor-id="optional-reading-list">Optional reading list</h3>
 <ul>
