deploy: ab1a1a8c31e3898f0c4ccf9e1d9187663e07baaa

--- a/LICENSE.html
+++ b/LICENSE.html
@@ -515,7 +515,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     <div class="nav-footer-center">
       <ul class="footer-items list-unstyled">
     <li class="nav-item">
-    <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About the Software Engineering Working Group</a>
+    <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About openstatsware</a>
   </li>  
     <li class="nav-item">
     <a class="nav-link" href="https://github.com/openpharma/workshop-r-swe-md">Source Code on GitHub</a>
