--- a/slides/02_r_packages.html
+++ b/slides/02_r_packages.html
@@ -392,7 +392,7 @@
 
 <section id="title-slide" class="quarto-title-block center">
   <h1 class="title">2 R packages</h1>
-  <p class="subtitle">ASA BIOP Course: Good Software Engineering Practice for R Packages</p>
+  <p class="subtitle"><code>openstatsware</code> Course: Good Software Engineering Practice for R Packages</p>
 
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
