--- a/slides/03_workflow.html
+++ b/slides/03_workflow.html
@@ -394,7 +394,7 @@
 
 <section id="title-slide" class="quarto-title-block center">
   <h1 class="title">3 An R Package Engineering Workflow</h1>
-  <p class="subtitle">ASA BIOP Course: Good Software Engineering Practice for R Packages</p>
+  <p class="subtitle"><code>openstatsware</code> Course: Good Software Engineering Practice for R Packages</p>
 
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
@@ -734,107 +734,107 @@ $sd2
 [1] 4
 
 $data
-    group     values
-1       1  2.5031469
-2       1  3.8096324
-3       1  1.7526642
-4       1 10.2149068
-5       1  5.2799746
-6       1  3.0355924
-7       1  4.7320663
-8       1  8.1073334
-9       1  3.5724311
-10      1  5.9922922
-11      1  5.5106508
-12      1  6.3482901
-13      1  4.0280325
-14      1  3.4864061
-15      1  8.4913104
-16      1  7.3770969
-17      1 10.0276771
-18      1  4.9487155
-19      1  5.3223897
-20      1  6.6239050
-21      1  4.7567099
-22      1 -0.1934546
-23      1  4.3417408
-24      1  6.7640827
-25      1  8.0297639
-26      1 10.5135396
-27      1  4.5765469
-28      1  2.1458936
-29      1 -0.6528589
-30      1  4.3454611
-31      1  8.5170041
-32      1  6.0335906
-33      1  0.2402073
-34      1  6.6804171
-35      1  4.1984554
-36      1  5.3962074
-37      1  5.3247887
-38      1  3.8025445
-39      1  5.5327504
-40      1  9.6993879
-41      1  9.2231800
-42      1 -0.2207543
-43      1  6.0436842
-44      1  2.7160914
-45      1  5.6221572
-46      1  2.9566346
-47      1  5.1418772
-48      1  7.7150700
-49      1  6.3002004
-50      1 10.0835672
-51      2 10.2881743
-52      2  6.2036493
-53      2 11.5207067
-54      2  5.2735381
-55      2  6.2836571
-56      2 12.9034451
-57      2  5.9859899
-58      2  3.5799977
-59      2  0.4751659
-60      2  7.1403379
-61      2 10.7519482
-62      2  6.2183225
-63      2  6.3692498
-64      2  8.2770043
-65      2  5.5695500
-66      2  2.1395694
-67      2  1.7479675
-68      2  6.2350908
-69      2 16.9686958
-70      2  3.0111198
-71      2  9.9101703
-72      2 10.3876263
-73      2  6.8205262
-74      2  6.7072444
-75      2 12.9407539
-76      2  5.2155861
-77      2  4.5006238
-78      2  8.4594870
-79      2  7.2368906
-80      2 10.2840445
-81      2  6.9475192
-82      2 10.4543132
-83      2  3.8696194
-84      2  6.5218816
-85      2  4.3402973
-86      2  9.0526754
-87      2  5.0153004
-88      2 11.7597668
-89      2  5.9407744
-90      2  3.8030474
-91      2  7.5429392
-92      2  3.4006998
-93      2  1.7840834
-94      2  2.7687083
-95      2  1.2966280
-96      2  1.1301550
-97      2  7.0750262
-98      2  4.5963000
-99      2  7.4086644
-100     2  3.8742132
+    group      values
+1       1 11.15426341
+2       1  8.45452299
+3       1  7.06269975
+4       1  6.56470540
+5       1  7.40552325
+6       1  1.73859569
+7       1  3.12347445
+8       1  1.93974325
+9       1  6.86441692
+10      1  1.57379064
+11      1  6.41030973
+12      1  7.32497941
+13      1  6.92184098
+14      1  3.81385354
+15      1  4.49399007
+16      1 -2.11889574
+17      1  2.83326723
+18      1  9.66247133
+19      1  7.84925995
+20      1  4.33553448
+21      1  0.47900702
+22      1  4.03916893
+23      1  2.70017902
+24      1  6.39859192
+25      1 -0.00673966
+26      1  6.11574549
+27      1  5.97114958
+28      1  3.31410791
+29      1  0.43577374
+30      1  7.02376144
+31      1  7.55931812
+32      1  4.60445732
+33      1 -0.13956705
+34      1  4.10733891
+35      1  5.97011528
+36      1  5.30385987
+37      1  3.68373303
+38      1  8.89799175
+39      1  6.37252908
+40      1  3.18691159
+41      1  2.51462479
+42      1 -1.43398791
+43      1  0.60523141
+44      1  6.25048620
+45      1  3.83485969
+46      1  4.51754425
+47      1  4.94358341
+48      1  9.90726382
+49      1  9.89563900
+50      1  4.79298804
+51      2  6.47990781
+52      2 15.96323515
+53      2  3.16072193
+54      2  7.98699316
+55      2  8.05061582
+56      2  8.26279466
+57      2  6.93546687
+58      2  6.87488665
+59      2 14.56332547
+60      2  6.45719115
+61      2  8.20325495
+62      2  6.33539002
+63      2  3.59057301
+64      2  6.09174305
+65      2  9.87257100
+66      2  9.56751817
+67      2  5.67529181
+68      2  0.01262791
+69      2 10.26863935
+70      2 -2.28335826
+71      2  5.84757806
+72      2  8.56090016
+73      2  4.85550790
+74      2  7.53009446
+75      2 -1.19878509
+76      2  8.94742281
+77      2  7.17724432
+78      2  7.40038704
+79      2  9.57905073
+80      2  9.71338740
+81      2  2.80062345
+82      2  1.25643938
+83      2  5.29646932
+84      2  0.93016638
+85      2  8.15631060
+86      2 -1.04345308
+87      2  9.94152679
+88      2 10.04519024
+89      2  8.61522289
+90      2  7.90924888
+91      2  0.10495860
+92      2  6.11575889
+93      2  4.59054356
+94      2  8.18044160
+95      2  8.32609324
+96      2 13.05027371
+97      2  2.33668757
+98      2  7.89467997
+99      2  5.96578908
+100     2  9.30482148
 
 attr(,"class")
 [1] "SimulationResult"</code></pre>
@@ -894,16 +894,16 @@ $data
 # A tibble: 100 × 2
    group values
    &lt;dbl&gt;  &lt;dbl&gt;
- 1     1   2.50
- 2     1   3.81
- 3     1   1.75
- 4     1  10.2 
- 5     1   5.28
- 6     1   3.04
- 7     1   4.73
- 8     1   8.11
- 9     1   3.57
-10     1   5.99
+ 1     1  11.2 
+ 2     1   8.45
+ 3     1   7.06
+ 4     1   6.56
+ 5     1   7.41
+ 6     1   1.74
+ 7     1   3.12
+ 8     1   1.94
+ 9     1   6.86
+10     1   1.57
 # ℹ 90 more rows</code></pre>
 </div>
 </div>
