--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Important: To use this work you must provide the name of the creators (initial a
 <section id="next-event" class="level2">
 <h2 class="anchored" data-anchor-id="next-event">Next Event</h2>
 <p>The next event will be held on September 26, 2023 as an in-person workshop at the George Washington University, Biostatistics Center, Suite 750, Rockville, MD, US. Please register <a href="https://www.eventbrite.com/e/good-software-engineering-practice-for-r-packages-tickets-675076410717?aff=oddtdtcreator">here</a>.</p>
-<p>This event is organized by the ASA BIOP Software Engineering Working Group (SWE WG) as well as the ASA. We are grateful to have received logistic support by ASA BIOP and ASA. The venue is kindly provided by the George Washington University Biostatistics Center. Presenters will be Andrew Bean, Biju (Ryan) Wang and Daniel Sabanes Bove.</p>
+<p>This event is organized by <a href="https://rconsortium.github.io/asa-biop-swe-wg/"><code>openstatsware</code></a> as well as the ASA. We are grateful to have received logistic support by ASA BIOP and ASA. The venue is kindly provided by the George Washington University Biostatistics Center. Presenters will be Andrew Bean, Biju (Ryan) Wang and Daniel Sabanes Bove.</p>
 </section>
 <section id="communication" class="level2">
 <h2 class="anchored" data-anchor-id="communication">Communication</h2>
@@ -510,7 +510,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     <div class="nav-footer-center">
       <ul class="footer-items list-unstyled">
     <li class="nav-item">
-    <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About the Software Engineering Working Group</a>
+    <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About openstatsware</a>
   </li>  
     <li class="nav-item">
     <a class="nav-link" href="https://github.com/openpharma/workshop-r-swe-md">Source Code on GitHub</a>
