--- a/listing.html
+++ b/listing.html
@@ -164,7 +164,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414762" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./slides/01_intro.html"> <img src="./slides/thumbnails/hello.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -174,7 +174,7 @@ ul.task-list li input[type="checkbox"] {
 1 Introduction
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Introduction and outline of program.<br><span class="copyright">Photo CC0 by Mabel Amber on pexels.com</span></p>
@@ -192,7 +192,7 @@ Andrew, Ryan, Daniel
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8">
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8">
 <div class="thumbnail">
 <p><a href="./slides/02_r_packages.html"> <img src="./slides/thumbnails/packages.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -202,7 +202,7 @@ Andrew, Ryan, Daniel
 2 R packages
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>R package syntax + practical<br><span class="copyright">Photo CC0 by cottonbro studio on pexels.com</span></p>
@@ -220,7 +220,7 @@ Ryan
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="11">
+<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="11">
 <div class="thumbnail">
 <p><a href="./slides/03_workflow.html"> <img src="./slides/thumbnails/workflow.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -230,7 +230,7 @@ Ryan
 3 An R Package Engineering Workflow
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Workflow for creating R packages + practical<br><span class="copyright">Photo CC0 by Andrea Piacquadio on pexels.com</span></p>
@@ -248,7 +248,7 @@ Andrew
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="22">
+<div class="quarto-post image-right" data-index="3" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="22">
 <div class="thumbnail">
 <p><a href="./slides/04_quality.html"> <img src="./slides/thumbnails/quality.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -258,7 +258,7 @@ Andrew
 4 Ensuring Quality
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Package quality + exercise<br><span class="copyright">Photo CC0 by Pixabay on pexels.com</span></p>
@@ -276,7 +276,7 @@ Andrew
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./slides/05_collaboration.html"> <img src="./slides/thumbnails/collaboration.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -286,7 +286,7 @@ Andrew
 5 Version Control &amp; Collaboration
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Collaboration via GitHub + practical<br><span class="copyright">Photo CC0 by THIS IS ZUN on pexels.com</span></p>
@@ -304,7 +304,7 @@ Daniel
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="5" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6">
 <div class="thumbnail">
 <p><a href="./slides/06_publication.html"> <img src="./slides/thumbnails/publish.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -314,7 +314,7 @@ Daniel
 6 Publication
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Publication of R packages + practical<br><span class="copyright">Photo CC0 by Andrea Piacquadio on pexels.com</span></p>
@@ -332,7 +332,7 @@ Daniel
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9">
+<div class="quarto-post image-right" data-index="6" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9">
 <div class="thumbnail">
 <p><a href="./slides/07_shiny.html"> <img src="./slides/thumbnails/shiny.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -342,7 +342,7 @@ Daniel
 7 Shiny Development
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Best Practices for Shiny App Development<br><span class="copyright">Photo by Pixabay on pexels.com</span></p>
@@ -360,7 +360,7 @@ Ryan
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="7" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
+<div class="quarto-post image-right" data-index="7" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493547438" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./slides/08_conclusion.html"> <img src="./slides/thumbnails/conclusion.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -370,7 +370,7 @@ Ryan
 8 Conclusion
 </h3>
 <div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
+<code>openstatsware</code> Course: Good Software Engineering Practice for R Packages
 </div>
 <div class="listing-description">
 <p>Discussion of learning experience, summary of workflow, conclusion and next steps.<br><span class="copyright">Photo by Ann H on pexels.com</span></p>
@@ -384,30 +384,6 @@ Sep 26, 2023
 </div>
 <div class="listing-author">
 Daniel
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="8" data-listing-date-sort="1695686400000" data-listing-file-modified-sort="1695493414766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
-<div class="thumbnail">
-<p><a href="./slides/license_footer.html"> <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div> </a></p>
-</div>
-<div class="body">
-<a href="./slides/license_footer.html">
-<h3 class="no-anchor listing-title">
-</h3>
-<div class="listing-subtitle">
-ASA BIOP Course: Good Software Engineering Practice for R Packages
-</div>
-<div class="listing-description">
-
-</div>
-</a>
-</div>
-<div class="metadata">
-<a href="./slides/license_footer.html">
-<div class="listing-date">
-Sep 26, 2023
 </div>
 </a>
 </div>
@@ -673,7 +649,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     <div class="nav-footer-center">
       <ul class="footer-items list-unstyled">
     <li class="nav-item">
-    <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About the Software Engineering Working Group</a>
+    <a class="nav-link" href="https://rconsortium.github.io/asa-biop-swe-wg/">About openstatsware</a>
   </li>  
     <li class="nav-item">
     <a class="nav-link" href="https://github.com/openpharma/workshop-r-swe-md">Source Code on GitHub</a>
