deploy: 7dc5026b786a18d0ffed514e414706944fcb6ed0

--- a/slides/05_collaboration.html
+++ b/slides/05_collaboration.html
@@ -680,7 +680,7 @@ Daniel
 </ul></li>
 <li>Allows task automation, e.g.
 <ul>
-<li>run unittests</li>
+<li>run unit tests</li>
 <li>build &amp; host documentation</li>
 <li>static code analysis (linting)</li>
 </ul></li>
@@ -720,8 +720,8 @@ Daniel
 </div>
 </div>
 </section>
-<section id="looks-awefully-complicated-why" class="slide level2">
-<h2>Looks awefully complicated, why?</h2>
+<section id="looks-awfully-complicated-why" class="slide level2">
+<h2>Looks awfully complicated, why?</h2>
 <ul>
 <li>Efficient collaboration with novice/untrusted contributors
 <ul>
