--- a/slides/03_workflow.html
+++ b/slides/03_workflow.html
@@ -418,7 +418,7 @@ Andrew
 <p><strong>From an idea to a production-grade R package</strong></p>
 <p>Example scenario: in your daily work, you notice that you need certain one-off scripts again and again.</p>
 <div class="fragment">
-<p><span class="blue"><i class="fa-solid fa-lightbulb fa-2x" aria-label="lightbulb"></i></span> The idea of creating an R package was born because you understood that “copy and paste” R scripts is inefficient and on top of that, you want to share your helpful R functions with colleagues and the world…</p>
+<p><span class="blue"><i class="fa-solid fa-lightbulb fa-2x" aria-label="lightbulb"></i></span> The idea of creating an R package was born because you understood that “copy and paste” R scripts is inefficient, and on top of that, you want to share your helpful R functions with colleagues and the world…</p>
 <div class="columns">
 <div class="column" style="width:50%;">
 
@@ -535,7 +535,7 @@ Andrew
 </div><div class="column" style="width:55%;">
 <ul>
 <li>Fulfill regulatory requirements<sup>1</sup></li>
-<li>Save refactoring time when the <em>PoC</em> becomes the release version</li>
+<li>Save refactoring time when the Proof-of-Concept (<em>PoC</em>) becomes the release version</li>
 <li>You don’t have to be shy any longer about inviting other developers to contribute to the package on <a href="https://github.com/">GitHub</a></li>
 </ul>
 </div>
@@ -601,7 +601,7 @@ Andrew
 <tbody>
 <tr class="odd">
 <td>Duty</td>
-<td style="text-align: left;">shall</td>
+<td style="text-align: left;">must, shall</td>
 <td>“must have”</td>
 </tr>
 <tr class="even">
@@ -611,18 +611,18 @@ Andrew
 </tr>
 <tr class="odd">
 <td>Intention</td>
-<td style="text-align: left;">will</td>
+<td style="text-align: left;">may</td>
 <td>“optional”</td>
 </tr>
 </tbody>
 </table>
-<aside><ol class="aside-footnotes"><li id="fn2"><p><a href="https://amzn.to/3DdwiBe">Rupp, C., &amp; SOPHISTen, die. (2009). Requirements-Engineering und -Management: Professionelle, iterative Anforderungsanalyse für die Praxis (5. Ed.). Carl Hanser Verlag GmbH &amp; Co.&nbsp;KG.</a></p></li></ol></aside></section>
+<aside><ol class="aside-footnotes"><li id="fn2"><p><a href="https://amzn.to/3DdwiBe">Rupp, C., &amp; SOPHISTen, die. (2009). Requirements-Engineering und -Management: Professionelle, iterative Anforderungsanalyse für die Praxis (5. Ed.). Carl Hanser Verlag GmbH &amp; Co.&nbsp;KG.</a>. See also: <a href="https://www.plainlanguage.gov/guidelines/conversational/shall-and-must/">plainlanguage.gov</a></p></li></ol></aside></section>
 <section id="example---step-2-design-docs-1" class="slide level2">
 <h2>Example - Step 2: Design docs</h2>
 <p><strong>Purpose and Scope</strong></p>
 <p>The R package <em>simulatr</em> shall enable the creation of reproducible fake data.</p>
 <p><strong>Package Requirements</strong></p>
-<p><em>simulatr</em> <strong>shall</strong> provide a function to generate normal distributed random data for two independent groups. The function <strong>shall</strong> allow flexible definition of sample size per group, mean per group, standard deviation per group. The reproducibility of the simulated data <strong>shall</strong> be ensured via an optional seed It <strong>should</strong> be possible to print the function result. A graphical presentation of the simulated data <strong>will</strong> also be possible.</p>
+<p><em>simulatr</em> <strong>shall</strong> provide a function to generate normal distributed random data for two independent groups. The function <strong>must</strong> allow flexible definition of sample size per group, mean per group, standard deviation per group. The reproducibility of the simulated data <strong>must</strong> be ensured via an optional seed. It <strong>should</strong> be possible to print the function result. The package <strong>may</strong> also facilitate graphical presentation of the simulated data.</p>
 </section>
 <section id="example---step-2-design-docs-2" class="slide level2">
 <h2>Example - Step 2: Design docs</h2>
@@ -734,107 +734,107 @@ $sd2
 [1] 4
 
 $data
-    group      values
-1       1 11.15426341
-2       1  8.45452299
-3       1  7.06269975
-4       1  6.56470540
-5       1  7.40552325
-6       1  1.73859569
-7       1  3.12347445
-8       1  1.93974325
-9       1  6.86441692
-10      1  1.57379064
-11      1  6.41030973
-12      1  7.32497941
-13      1  6.92184098
-14      1  3.81385354
-15      1  4.49399007
-16      1 -2.11889574
-17      1  2.83326723
-18      1  9.66247133
-19      1  7.84925995
-20      1  4.33553448
-21      1  0.47900702
-22      1  4.03916893
-23      1  2.70017902
-24      1  6.39859192
-25      1 -0.00673966
-26      1  6.11574549
-27      1  5.97114958
-28      1  3.31410791
-29      1  0.43577374
-30      1  7.02376144
-31      1  7.55931812
-32      1  4.60445732
-33      1 -0.13956705
-34      1  4.10733891
-35      1  5.97011528
-36      1  5.30385987
-37      1  3.68373303
-38      1  8.89799175
-39      1  6.37252908
-40      1  3.18691159
-41      1  2.51462479
-42      1 -1.43398791
-43      1  0.60523141
-44      1  6.25048620
-45      1  3.83485969
-46      1  4.51754425
-47      1  4.94358341
-48      1  9.90726382
-49      1  9.89563900
-50      1  4.79298804
-51      2  6.47990781
-52      2 15.96323515
-53      2  3.16072193
-54      2  7.98699316
-55      2  8.05061582
-56      2  8.26279466
-57      2  6.93546687
-58      2  6.87488665
-59      2 14.56332547
-60      2  6.45719115
-61      2  8.20325495
-62      2  6.33539002
-63      2  3.59057301
-64      2  6.09174305
-65      2  9.87257100
-66      2  9.56751817
-67      2  5.67529181
-68      2  0.01262791
-69      2 10.26863935
-70      2 -2.28335826
-71      2  5.84757806
-72      2  8.56090016
-73      2  4.85550790
-74      2  7.53009446
-75      2 -1.19878509
-76      2  8.94742281
-77      2  7.17724432
-78      2  7.40038704
-79      2  9.57905073
-80      2  9.71338740
-81      2  2.80062345
-82      2  1.25643938
-83      2  5.29646932
-84      2  0.93016638
-85      2  8.15631060
-86      2 -1.04345308
-87      2  9.94152679
-88      2 10.04519024
-89      2  8.61522289
-90      2  7.90924888
-91      2  0.10495860
-92      2  6.11575889
-93      2  4.59054356
-94      2  8.18044160
-95      2  8.32609324
-96      2 13.05027371
-97      2  2.33668757
-98      2  7.89467997
-99      2  5.96578908
-100     2  9.30482148
+    group     values
+1       1  8.1877959
+2       1  3.1256424
+3       1 -0.7123684
+4       1  8.0062031
+5       1  3.7445666
+6       1  7.4017006
+7       1  6.1451731
+8       1  6.2463508
+9       1  1.1888221
+10      1  2.9174866
+11      1  4.8357047
+12      1  8.2331736
+13      1  1.1846376
+14      1  8.4368164
+15      1  4.0010817
+16      1  0.6943409
+17      1  3.1125980
+18      1  5.1262472
+19      1  3.9734088
+20      1 13.6124691
+21      1  7.4369619
+22      1  1.2381687
+23      1 -1.0984821
+24      1  4.7939574
+25      1  7.4923016
+26      1  6.4631161
+27      1  3.1608185
+28      1  3.3063510
+29      1 10.2147433
+30      1  4.2986013
+31      1  3.2779583
+32      1  8.9760849
+33      1  2.5390404
+34      1  4.1786131
+35      1  7.7717133
+36      1  0.8298876
+37      1  8.4250048
+38      1  2.6576641
+39      1  2.9634827
+40      1  2.7996269
+41      1  9.6266776
+42      1  4.0587047
+43      1  2.6323549
+44      1  6.9446024
+45      1  3.4076686
+46      1  6.7881398
+47      1  2.9491087
+48      1  7.9485885
+49      1  3.9100972
+50      1  7.2749561
+51      2  8.4653003
+52      2 14.9302654
+53      2 11.3485733
+54      2 11.1172145
+55      2  2.2800183
+56      2 -0.5739234
+57      2 12.8155147
+58      2  9.4616718
+59      2  9.1585690
+60      2 10.3036197
+61      2 11.1888311
+62      2  6.1211413
+63      2  8.3097501
+64      2  2.7907841
+65      2  6.1394545
+66      2  7.1140073
+67      2 13.6609817
+68      2  3.7866438
+69      2 15.4840286
+70      2  2.6551264
+71      2  7.1186900
+72      2 13.8645283
+73      2 11.5743349
+74      2 10.0512783
+75      2 11.3151167
+76      2  7.1959914
+77      2  4.5222863
+78      2  5.9756662
+79      2 13.7356258
+80      2 -3.8439783
+81      2 10.3556782
+82      2  5.1055137
+83      2  3.8014568
+84      2  3.7391031
+85      2  0.5242508
+86      2  8.6056499
+87      2  8.7863186
+88      2  3.1955567
+89      2  9.7353865
+90      2  6.8388277
+91      2  7.0221119
+92      2  3.3395549
+93      2  4.6703958
+94      2 -0.3339959
+95      2  9.4980469
+96      2  5.4978992
+97      2 10.8276357
+98      2  8.9799441
+99      2  6.7572795
+100     2  7.9092328
 
 attr(,"class")
 [1] "SimulationResult"</code></pre>
@@ -894,16 +894,16 @@ $data
 # A tibble: 100 × 2
    group values
    &lt;dbl&gt;  &lt;dbl&gt;
- 1     1  11.2 
- 2     1   8.45
- 3     1   7.06
- 4     1   6.56
- 5     1   7.41
- 6     1   1.74
- 7     1   3.12
- 8     1   1.94
- 9     1   6.86
-10     1   1.57
+ 1     1  8.19 
+ 2     1  3.13 
+ 3     1 -0.712
+ 4     1  8.01 
+ 5     1  3.74 
+ 6     1  7.40 
+ 7     1  6.15 
+ 8     1  6.25 
+ 9     1  1.19 
+10     1  2.92 
 # ℹ 90 more rows</code></pre>
 </div>
 </div>
@@ -1054,7 +1054,7 @@ Taylor &amp; Francis Ltd.&nbsp;[<a href="https://amzn.to/3uLnxLd">Book</a> | <a 
 <h1>License information</h1>
 <ul>
 <li>Creators (initial authors): Friedrich Pahlke <a href="https://github.com/fpahlke/"><svg aria-hidden="true" role="img" viewbox="0 0 496 512" style="height:1em;width:0.97em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg></a> <a href="https://www.linkedin.com/in/pahlke/"><svg aria-hidden="true" role="img" viewbox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg></a></li>
-<li>In the current version, changes were done by (later authors): TODO: FILL IN, OR IF NOT APPLICABLE DELETE THIS BULLET</li>
+<li>In the current version, changes were done by (later authors): Andrew Bean <a href="https://github.com/andrew-bean"><svg aria-hidden="true" role="img" viewbox="0 0 496 512" style="height:1em;width:0.97em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg></a> <a href="https://www.linkedin.com/in/andrew-bean-83539116/"><svg aria-hidden="true" role="img" viewbox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg></a></li>
 <li>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</li>
 <li>The source files are hosted at <a href="https://github.com/openpharma/workshop-r-swe-md">github.com/openpharma/workshop-r-swe-md</a>, which is forked from the original version at <a href="https://github.com/openpharma/workshop-r-swe/">github.com/openpharma/workshop-r-swe</a>.</li>
 <li>Important: To use this work you must provide the name of the creators (initial authors), a link to the material, a link to the license, and indicate if changes were made</li>
